<resources>
    <string name="google_maps_key">AIzaSyCFTvN4wx2Js4A6LFT9K6ogTDjs78VKowY</string>
    <string name="app_name">VoteApp</string>
    <string name="title_activity_plan">PlanActivity</string>
    <string name="vote_tab_text_1">Összefoglaló</string>
    <string name="vote_tab_text_2">Lehetőség 1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wait_5_sec">Kérem fontolja meg alaposan szavazatát és várjon 5 másodpercet!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua__at_consectetur_lorem_donec_massa_sapien_faucibus__et_pharetra_pharetra_massa_massa_ultricies_mi__nisl_pretium_fusce_id_velit_ut_tort_ek2_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At consectetur lorem donec massa sapien faucibus. Et pharetra pharetra massa massa ultricies mi. Nisl pretium fusce id velit ut tortor pretium viverra suspendisse. Dignissim convallis aenean et tortor at risus viverra adipiscing. Porta non pulvinar neque laoreet suspendisse interdum consectetur libero. Adipiscing enim eu turpis egestas pretium aenean pharetra. Nisi porta lorem mollis aliquam ut. Et malesuada fames ac turpis. Nec tincidunt praesent semper feugiat nibh sed pulvinar.</string>
    <string name="nagy_g_za_ek2_string">Nagy Gza</string>
    <string name="orsz_ggy_l_si_k_pvisel__ek2_string">orszggylsi kpvisel</string>
    <string name="_29_napja_ek2_string">29 napja</string>
    <string name="lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua__at_consectetur_lorem_donec_massa_sapien_faucibus__et_pharetra_pharetra_massa_massa_ultricies_mi__nisl_pretium_fusce_id_velit_ut_tort_ek3_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At consectetur lorem donec massa sapien faucibus. Et pharetra pharetra massa massa ultricies mi. Nisl pretium fusce id velit ut tortor pretium viverra suspendisse. Dignissim convallis aenean et tortor at risus viverra adipiscing. Porta non pulvinar neque laoreet suspendisse interdum consectetur libero. Adipiscing enim eu turpis egestas pretium aenean pharetra. Nisi porta lorem mollis aliquam ut. Et malesuada fames ac turpis. Nec tincidunt praesent semper feugiat nibh sed pulvinar.</string>
    <string name="nagy_g_za_ek3_string">Nagy Gza</string>
    <string name="orsz_ggy_l_si_k_pvisel__ek3_string">orszggylsi kpvisel</string>
    <string name="_29_napja_ek3_string">29 napja</string>
    <string name="lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua__at_consectetur_lorem_donec_massa_sapien_faucibus__et_pharetra_pharetra_massa_massa_ultricies_mi__nisl_pretium_fusce_id_velit_ut_tort_ek4_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At consectetur lorem donec massa sapien faucibus. Et pharetra pharetra massa massa ultricies mi. Nisl pretium fusce id velit ut tortor pretium viverra suspendisse. Dignissim convallis aenean et tortor at risus viverra adipiscing. Porta non pulvinar neque laoreet suspendisse interdum consectetur libero. Adipiscing enim eu turpis egestas pretium aenean pharetra. Nisi porta lorem mollis aliquam ut. Et malesuada fames ac turpis. Nec tincidunt praesent semper feugiat nibh sed pulvinar.</string>
    <string name="nagy_g_za_ek4_string">Nagy Gza</string>
    <string name="orsz_ggy_l_si_k_pvisel__ek4_string">orszggylsi kpvisel</string>
    <string name="_29_napja_ek4_string">29 napja</string>
    <string name="lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua__at_consectetur_lorem_donec_massa_sapien_faucibus__et_pharetra_pharetra_massa_massa_ultricies_mi__nisl_pretium_fusce_id_velit_ut_tort_ek5_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At consectetur lorem donec massa sapien faucibus. Et pharetra pharetra massa massa ultricies mi. Nisl pretium fusce id velit ut tortor pretium viverra suspendisse. Dignissim convallis aenean et tortor at risus viverra adipiscing. Porta non pulvinar neque laoreet suspendisse interdum consectetur libero. Adipiscing enim eu turpis egestas pretium aenean pharetra. Nisi porta lorem mollis aliquam ut. Et malesuada fames ac turpis. Nec tincidunt praesent semper feugiat nibh sed pulvinar.</string>
    <string name="nagy_g_za_ek5_string">Nagy Gza</string>
    <string name="orsz_ggy_l_si_k_pvisel__ek5_string">orszggylsi kpvisel</string>
    <string name="_29_napja_ek5_string">29 napja</string>
    <string name="h_rfolyam_string">Hrfolyam</string>
    <string name="bel_p_s_string">Belps</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="bel_p_s_ek1_string">Belps</string>
    <string name="email_c_m_string">Email cm</string>
    <string name="jelsz__ek1_string">Jelsz</string>
    <string name="vote_string">Vote</string>
    <string name="bejelentkez_s_e_mail_c_mmel_string">Bejelentkezse-mail cmmel</string>
    <string name="regisztr_lj_itt_ek1_string">Regisztrlj itt!</string>
    <string name="nincs_m_g_fi_kod__string">Nincs mg fikod?</string>
    <string name="regisztr_ci__ek1_string">Regisztrci</string>
    <string name="vote_ek1_string">Vote</string>
    <string name="google_bejelntkze_s_string">Google bejelntkzes</string>
    <string name="_dv_z_l__a__vote__string">dvzl a Vote!</string>
    <string name="van_m_r_fi_kod__string">Van mr fikod?</string>
    <string name="_jelentkezz_be__string">Jelentkezz be!</string>
    <string name="regisztr_ci__ek5_string">Regisztrci</string>
    <string name="jelsz__meger_s_t_se_string">Jelsz megerstse</string>
    <string name="vote_ek2_string">Vote</string>
    <string name="regisztr_ci__e_mail_c_mmel_string">Regisztrcie-mail cmmel</string>
    <string name="email_c_m_ek1_string">Email cm</string>
    <string name="jelsz__ek3_string">Jelsz</string>
    <string name="lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua__at_consectetur_lorem_donec_massa_sapien_faucibus__et_pharetra_pharetra_massa_massa_ultricies_mi__nisl_pretium_fusce_id_velit_ut_tort_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At consectetur lorem donec massa sapien faucibus. Et pharetra pharetra massa massa ultricies mi. Nisl pretium fusce id velit ut tortor pretium viverra suspendisse. Dignissim convallis aenean et tortor at risus viverra adipiscing. Porta non pulvinar neque laoreet suspendisse interdum consectetur libero. Adipiscing enim eu turpis egestas pretium aenean pharetra. Nisi porta lorem mollis aliquam ut. Et malesuada fames ac turpis. Nec tincidunt praesent semper feugiat nibh sed pulvinar.</string>
    <string name="nagy_g_za_string">Nagy Gza</string>
    <string name="orsz_ggy_l_si_k_pvisel__string">orszggylsi kpvisel</string>
    <string name="_29_napja_string">29 napja</string>
    <string name="h_rfolyam_ek3_string">Hrfolyam</string>
    <string name="lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua__odio_euismod_lacinia_at_quis_risus_sed__string">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Odio euismod lacinia at quis risus sed.</string>
    <string name="_llatmenhely__p_t_s_string">llatmenhely pts</string>
    <string name="p_cs_string">Pcs</string>
    <string name="m_rcius_6_string">Március 6</string>
    <string name="akt_v_ek3_string">Aktv</string>
    <string name="_llatmenhely__p_t_s_ek1_string">llatmenhely pts</string>
    <string name="lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua__risus_feugiat_in_ante_metus_dictum_at_tempor_commodo__praesent_semper_feugiat_nibh_sed_pulvinar_proin_gravida_hendrerit_lectus__eges_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Risus feugiat in ante metus dictum at tempor commodo. Praesent semper feugiat nibh sed pulvinar proin gravida hendrerit lectus. Egestas sed sed risus pretium. Tempus egestas sed sed risus pretium quam vulputate. Pulvinar mattis nunc sed blandit libero volutpat sed. Euismod lacinia at quis risus sed vulputate odio ut. Id faucibus nisl tincidunt eget nullam non. Egestas tellus rutrum tellus pellentesque eu. Vel elit scelerisque mauris pellentesque pulvinar. Suscipit adipiscing bibendum est ultricies. Et ultrices neque ornare aenean euismod elementum nisi quis eleifend.Elit duis tristique sollicitudin nibh sit amet commodo nulla facilisi. Pellentesque sit amet porttitor eget. Egestas pretium aenean pharetra magna ac. Amet consectetur adipiscing elit ut aliquam. Malesuada fames ac turpis egestas maecenas pharetra convallis posuere morbi. Id diam maecenas ultricies mi eget mauris pharetra et. Ut lectus arcu bibendum at varius vel pharetra vel turpis. Vestibulum lectus mauris ultrices eros in cursus turpis massa. Ligula ullamcorper malesuada proin libero nunc consequat. Sit amet nisl purus in mollis nunc sed. Montes nascetur ridiculus mus mauris. Eget arcu dictum varius duis at.Rhoncus mattis rhoncus urna neque viverra justo nec ultrices. Eu non diam phasellus vestibulum lorem sed risus ultricies. Urna duis convallis convallis tellus id interdum velit laoreet id. Viverra adipiscing at in tellus integer feugiat scelerisque varius. Ipsum nunc aliquet bibendum enim facilisis gravida. Maecenas sed enim ut sem viverra aliquet eget sit. Convallis posuere morbi leo urna molestie at elementum eu. Arcu non sodales neque sodales ut etiam sit amet nisl. In fermentum posuere urna nec tincidunt. Molestie nunc non blandit massa enim nec dui. Elementum integer enim neque volutpat ac. Risus at ultrices mi tempus imperdiet. Tempus urna et pharetra pharetra massa massa.</string>
    <string name="nagy_j_zsef_string">Nagy Jzsef</string>
    <string name="marcius_6_string">Marcius 6</string>
    <string name="lehet_s_gek_string">Lehetsgek</string>
    <string name="_llatmenhely__p_t_s_ek2_string">llatmenhely pts</string>
    <string name="nagy_j_zsef_ek1_string">Nagy Jzsef</string>
    <string name="marcius_6_ek1_string">Marcius 6</string>
    <string name="mellette_sz_l___rvek_string">Mellette szl rvek</string>
</resources>