<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_ended_vote_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white_grey_bg"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/sazvaz_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/rectangle_11"
                        android:layout_width="367dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:background="@drawable/rectangle_11_shape" />

                    <TextView
                        android:id="@+id/vote_text1"
                        android:layout_width="328.2dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="163dp"
                        android:background="@color/white_grey_bg"
                        android:ellipsize="end"
                        android:fontFamily="Raleway"
                        android:lines="4"
                        android:text="@string/lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua__odio_euismod_lacinia_at_quis_risus_sed__string"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/vote_title1"
                        android:layout_width="173.2dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="136dp"
                        android:background="@color/white_grey_bg"
                        android:fontFamily="Raleway"
                        android:text="@string/_llatmenhely__p_t_s_string"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/vote_image1"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:alpha="0.75"
                        android:background="@color/white_grey_bg"
                        android:contentDescription="menhely_k_p"
                        android:src="@drawable/kerites" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/white_grey_bg"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/vote_deadline1"
                        android:layout_width="wrap_content"
                        android:layout_height="22.2dp"
                        android:background="@color/white_grey_bg"
                        android:fontFamily="segoe ui"
                        android:gravity="right"
                        android:text="@string/m_rcius_6_string"
                        android:textColor="@color/gray_dark"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/vote_is_active"
                        android:layout_width="wrap_content"
                        android:layout_height="22.2dp"
                        android:layout_marginStart="6dp"
                        android:background="@color/white_grey_bg"
                        android:fontFamily="segoe ui"
                        android:gravity="right"
                        android:text="Lezárt"
                        android:textColor="@color/ended_red"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/vote_location1"
                        android:layout_width="match_parent"
                        android:layout_height="38.2dp"
                        android:background="@color/white_grey_bg"
                        android:fontFamily="Raleway"
                        android:gravity="right"
                        android:text="@string/p_cs_string"
                        android:textColor="@color/blue_main"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>


</LinearLayout>